feat: implement add user function
