# ports/openapi_handler.go
@@ -35,6 +35,27 @@ func (h HttpHandler) GetTasks(w http.ResponseWriter, r *http.Request) {
 	render.Respond(w, r, tasks)
 }
 
+func (h HttpHandler) AddUser(w http.ResponseWriter, r *http.Request) {
+	op := errors.Op("http.AddUser")
+
+	body := PostUser{}
+	if err := render.Decode(r, &body); err != nil {
+		badRequest(err, w, r)
+		return
+	}
+
+	err := h.app.Commands.AddUser.Handle(r.Context(), command.AddUser{
+		Role: body.Role,
+	})
+
+	if err != nil {
+		badRequest(errors.E(op, err), w, r)
+		return
+	}
+
+	responseSuccess(w, r)
+}
+
 func (h HttpHandler) CreateTask(w http.ResponseWriter, r *http.Request) {
 	op := errors.Op("http.CreateTask")
 	ctx := r.Context()
